--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <img src="../assets/Images/businessCard.png" alt="Business Card Illustration" class="img-fluid mb-4" style="max-width: 200px;">
   
     <div class="d-flex justify-content-center gap-3 flex-wrap">
-      <a routerLink="/add" class="btn btn-primary btn-lg">Add New Card</a>
+      <a routerLink="addCard" class="btn btn-primary btn-lg">Add New Card</a>
       <a routerLink="/import" class="btn btn-outline-secondary btn-lg">Import Cards</a>
       <a routerLink="Cards" class="btn btn-outline-dark btn-lg">View All Cards</a>
     </div>
