--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bg-dark text-light text-center py-3 mt-auto">
-    <div class="container">
+<footer class="bg-dark text-light text-center py-3 mt-auto " style="height: 17%;">
+    <div class="container" style="margin-top: 1%;">
       <p class="mb-1">&copy; 2025 Business Card Manager</p>
       <small>Developed by Mohammed Alqudah | Powered by Angular 16 & .NET 6.0 & Oracle Db</small>
     </div>
