--- a/src/app/import-card/import-card.component.html
+++ b/src/app/import-card/import-card.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="upload-container" style="margin-top: 13%; margin-bottom: 13%;" *ngIf="records.length===0">
+<div class="upload-container" style="margin-top: 13%; margin-bottom: 13%;" *ngIf="records.length === 0">
   <!-- Combined File Input -->
   <div class="file-drop" (drop)="handleDrop($event)" (dragover)="handleDragOver($event)">
     <input type="file" accept=".csv,.xml" (change)="handleFileInput($event)" hidden #fileInput>
@@ -9,9 +9,8 @@
 </div>
 
 <!-- Card Preview -->
-<h2 style="text-align: center; margin-top: 5px;" *ngIf="records.length!=0">Preview Cards</h2>
+<h2 style="text-align: center; margin-top: 5px;" *ngIf="records.length !== 0">Preview Cards</h2>
 <div class="card-container" style="margin-top: 2%; margin-bottom: 2%;">
-    
   <div class="card" *ngFor="let record of records">
     <img [src]="record.Imagepath || '../../assets/Images/businessCard.png'" alt="Card Image">
     <p hidden><strong>Id:</strong> {{ record.Id }}</p>
@@ -23,5 +22,8 @@
     <p><strong>Address:</strong> {{ record.Address }}</p>
   </div>
 </div>
-<button type="submit" class="btn btn-primary">Submit</button>
+
+<!-- Submit Button -->
+<button type="submit" class="btn btn-primary" (click)="submit()">Submit</button>
+
 <app-footer></app-footer>
