--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
   
     <div class="d-flex justify-content-center gap-3 flex-wrap">
       <a routerLink="addCard" class="btn btn-primary btn-lg">Add New Card</a>
-      <a routerLink="/import" class="btn btn-outline-secondary btn-lg">Import Cards</a>
+      <a routerLink="importCard" class="btn btn-outline-secondary btn-lg">Import Cards</a>
       <a routerLink="Cards" class="btn btn-outline-dark btn-lg">View All Cards</a>
     </div>
   </div>
